--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -4,7 +4,8 @@ on:
   push:
     branches: [ "main" ]
   schedule:
-    - cron: '0 0 * * *'
+    - cron: '0 6 * * 1'
+  workflow_dispatch:
 
 jobs:
   build:
